Fixed #355 - Bootstrap.css shifts a label in a Tabulator Page Size Selector

--- a/src/tables/table.scss
+++ b/src/tables/table.scss
@@ -66,6 +66,7 @@
 
   select {
     @include dropdown();
+    line-height: initial;
   }
 
   input {
